# taskell

./: .cmt  .editorconfig  .gitignore  .hindent.yaml  .stylish-haskell.yaml  .travis.yml  .weeder.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cabal.project  github.paw  package.yaml  roadmap.json  roadmap.md  stack.yaml  taskell.cabal  taskell.json  trello.paw  version-bump.md
.bin/: analytics  build  ghci  ghcid  heap  taskell  tests
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
app/: Main.hs
docs/: CNAME  Capfile  Gemfile  _config.yml  icon.afdesign  index.md
docs/deployment/: deploy.rb
docs/deployment/deploy/: production.rb
docs/html/: .gitignore  _config.yml  index.md
docs/html/_includes/: page-footer.html  page-header.html
docs/html/deployment/: deploy.rb
src/: Actions.hs  App.hs  CLI.hs  Config.hs  Draw.hs  Keyboard.hs  Lib.hs  Render.hs  State.hs  Task.hs  Taskell.hs  TaskellJSON.hs  Types.hs
src/Data/Taskell/: AllTasks.hs  Date.hs  List.hs  Lists.hs  Seq.hs  String.hs  Subtask.hs  Task.hs  Tasks.hs  Text.hs
src/Data/Taskell/Date/: RelativeParser.hs  Types.hs
src/Data/Taskell/List/: Internal.hs
src/Data/Taskell/Lists/: Internal.hs
src/Data/Taskell/Subtask/: Internal.hs
src/Data/Taskell/Task/: Internal.hs
src/Events/: Actions.hs  Bindings.hs  State.hs
src/Events/Actions/: Insert.hs  Modal.hs  Normal.hs  Search.hs  Types.hs
src/Events/Actions/Insert/: List.hs  Task.hs
src/Events/Actions/Insert/List/: Create.hs  Edit.hs
src/Events/Actions/Insert/Task/: Create.hs  Edit.hs
src/Events/Actions/Modal/: Detail.hs  Due.hs  Help.hs  MoveTo.hs  SubTasks.hs
src/Events/State/: History.hs  Types.hs
src/Events/State/Modal/: Detail.hs  Due.hs  SubTasks.hs
src/Events/State/Types/: Mode.hs
src/Flow/: Actions.hs  Keyboard.hs  State.hs
src/Flow/Actions/: Create.hs  CreateList.hs  Edit.hs  EditList.hs  Insert.hs  Normal.hs  Search.hs
src/Flow/Actions/Edit/: CreateList.hs  CreateTask.hs  EditList.hs  EditTask.hs
src/Flow/Actions/Insert/: List.hs  Task.hs
src/Flow/Actions/Insert/List/: Create.hs  Edit.hs
src/Flow/Actions/Insert/Task/: Create.hs  Edit.hs
src/IO/: Aeson.hs  Config.hs  GitHub.hs  Keyboard.hs  Markdown.hs  Taskell.hs  Trello.hs
src/IO/Config/: General.hs  GitHub.hs  Layout.hs  Markdown.hs  Parser.hs  Trello.hs
src/IO/GitHub/: Card.hs  Column.hs
src/IO/HTTP/: Aeson.hs  GitHub.hs  Trello.hs
src/IO/HTTP/GitHub/: AutomatedCard.hs  Card.hs  Column.hs  Issue.hs  Project.hs  Utility.hs
src/IO/HTTP/Trello/: Card.hs  ChecklistItem.hs  List.hs
src/IO/Keyboard/: Parser.hs  Types.hs
src/IO/Markdown/: Internal.hs  Parser.hs  Serializer.hs
src/IO/Trello/: Aeson.hs  Card.hs  ChecklistItem.hs  List.hs
src/Persistence/: Config.hs  Markdown.hs  Taskell.hs
src/Taskell/: Config.hs  IO.hs  Types.hs
src/Taskell/Data/: Date.hs  List.hs  Lists.hs  Seq.hs  Subtask.hs  Task.hs  Utility.hs
src/Taskell/Data/Date/: RelativeParser.hs  Types.hs
src/Taskell/Data/List/: Internal.hs
src/Taskell/Data/Lists/: Internal.hs
src/Taskell/Data/Subtask/: Internal.hs
src/Taskell/Data/Task/: Internal.hs
src/Taskell/Events/: Actions.hs  State.hs
src/Taskell/Events/Actions/: Insert.hs  Modal.hs  Normal.hs  Search.hs  Types.hs
src/Taskell/Events/Actions/Modal/: Detail.hs  Due.hs  Help.hs  MoveTo.hs  TaskList.hs
src/Taskell/Events/State/: History.hs  Types.hs
src/Taskell/Events/State/Modal/: Detail.hs  Due.hs  Help.hs  TaskList.hs
src/Taskell/Events/State/Types/: Mode.hs
src/Taskell/IO/: Config.hs  Keyboard.hs  Markdown.hs
src/Taskell/IO/Config/: General.hs  GitHub.hs  Layout.hs  Markdown.hs  Parser.hs  Trello.hs
src/Taskell/IO/HTTP/: Aeson.hs  GitHub.hs  Trello.hs
src/Taskell/IO/HTTP/GitHub/: AutomatedCard.hs  Card.hs  Column.hs  Project.hs  Utility.hs
src/Taskell/IO/HTTP/Trello/: Card.hs  ChecklistItem.hs  List.hs
src/Taskell/IO/Keyboard/: Parser.hs  Types.hs
src/Taskell/IO/Markdown/: Parser.hs  Serializer.hs
src/Taskell/UI/: CLI.hs  Draw.hs  Theme.hs  Types.hs
src/Taskell/UI/Draw/: Field.hs  Main.hs  Modal.hs  Mode.hs  Task.hs  Types.hs
src/Taskell/UI/Draw/Main/: List.hs  Search.hs  StatusBar.hs
src/Taskell/UI/Draw/Modal/: Detail.hs  Due.hs  Help.hs  MoveTo.hs  TaskList.hs
src/Taskell/Utility/: Parser.hs
src/UI/: Attr.hs  CLI.hs  Draw.hs  Field.hs  Internal.hs  List.hs  Main.hs  Modal.hs  Render.hs  Styles.hs  Task.hs  TextEdit.hs  Theme.hs  Types.hs
src/UI/Draw/: Field.hs  Main.hs  Modal.hs  Mode.hs  Task.hs  Types.hs
src/UI/Draw/Main/: List.hs  Search.hs  StatusBar.hs
src/UI/Draw/Modal/: Detail.hs  Due.hs  Help.hs  MoveTo.hs
src/UI/Modal/: Detail.hs  Due.hs  Help.hs  Internal.hs  MoveTo.hs  SubTasks.hs
src/Utility/: Parser.hs
templates/: api-error.txt  bindings.ini  config.ini  controls.md  github-token.txt  help.txt  template.md  theme.ini  token.txt  trello-token.txt  usage.txt
test/: Spec.hs
test/Data/Taskell/: DateTest.hs  ListNavigationTest.hs  ListTest.hs  ListsTest.hs  SeqTest.hs  SubtaskTest.hs  TaskTest.hs
test/Data/Taskell/Date/: RelativeParserTest.hs
test/Events/: StateTest.hs
test/Events/State/: HistoryTest.hs
test/IO/: GitHubTest.hs  KeyboardTest.hs  MarkdownTest.hs  TrelloTest.hs
test/IO/GitHub/: CardsTest.hs
test/IO/Keyboard/: ParserTest.hs  TypesTest.hs
test/IO/Keyboard/data/: bindings.ini
test/IO/Markdown/: ParserTest.hs  SerializerTest.hs
test/IO/data/: roadmap.md
test/Taskell/Data/: DateTest.hs  ListNavigationTest.hs  ListTest.hs  ListsTest.hs  SeqTest.hs  SubtaskTest.hs  TaskTest.hs
test/Taskell/Data/Date/: RelativeParserTest.hs
test/Taskell/Events/: StateTest.hs
test/Taskell/Events/State/: HistoryTest.hs
test/Taskell/IO/: GitHubTest.hs  KeyboardTest.hs  TrelloTest.hs
test/Taskell/IO/GitHub/: CardsTest.hs
test/Taskell/IO/Keyboard/: ParserTest.hs  TypesTest.hs
test/Taskell/IO/Keyboard/data/: bindings.ini
test/Taskell/IO/Markdown/: ParserTest.hs  SerializerTest.hs
test/Taskell/IO/data/: roadmap.md  trello-checklists.json  trello.json
test/Taskell/UI/: FieldTest.hs
test/UI/: FieldTest.hs  TextEditTest.hs
