name:                taskell
version:             0.10.3.0
-- synopsis: A CLI task manager, written in Haskell
-- description: Allows you to create version controlled task lists
homepage:            https://github.com/smallhadroncollider/taskell#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Wales
maintainer:          mark@smallhadroncollider.com
copyright:           2017 Mark Wales
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 2.0

library
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  exposed-modules:     App

                     , Data.Taskell.Task
                     , Data.Taskell.List
                     , Data.Taskell.Lists
                     , Data.Taskell.Seq
                     , Data.Taskell.Text

                     , Events.Actions
                     , Events.Actions.Normal
                     , Events.Actions.Search
                     , Events.Actions.Insert
                     , Events.Actions.Modal
                     , Events.Actions.Modal.Help
                     , Events.Actions.Modal.SubTasks
                     , Events.Actions.Insert.Task
                     , Events.Actions.Insert.Task.Create
                     , Events.Actions.Insert.Task.Edit
                     , Events.Actions.Insert.List
                     , Events.Actions.Insert.List.Create
                     , Events.Actions.Insert.List.Edit

                     , Events.State
                     , Events.State.Types
                     , Events.State.Modal.SubTasks

                     , IO.Taskell
                     , IO.Markdown
                     , IO.Config

                     , UI.CLI
                     , UI.Draw
                     , UI.Modal
                     , UI.Theme
                     , UI.Types

  build-depends:       base <= 5
                     , vty
                     , text
                     , brick
                     , bytestring
                     , config-ini
                     , containers
                     , directory
                     , file-embed
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings


executable taskell
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , taskell
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite taskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , taskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/smallhadroncollider/taskell
