name:                taskell
version:             1.0.1.0
-- synopsis: A CLI task manager, written in Haskell
-- description: Allows you to create version controlled task lists
homepage:            https://github.com/smallhadroncollider/taskell#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Wales
maintainer:          mark@smallhadroncollider.com
copyright:           2017 Mark Wales
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 2.0

library
  ghc-options:         -Wall -Werror
  hs-source-dirs:      src
  exposed-modules:     App

                     , Data.Taskell.Task
                     , Data.Taskell.List
                     , Data.Taskell.Lists
                     , Data.Taskell.Seq

                     , Events.Actions
                     , Events.Actions.Normal
                     , Events.Actions.Search
                     , Events.Actions.Insert
                     , Events.Actions.Modal
                     , Events.Actions.Modal.Help
                     , Events.Actions.Modal.MoveTo
                     , Events.Actions.Modal.SubTasks

                     , Events.State
                     , Events.State.Types
                     , Events.State.Modal.SubTasks

                     , IO.Taskell
                     , IO.Markdown
                     , IO.Markdown.Internal
                     , IO.Config

                     , UI.CLI
                     , UI.Draw
                     , UI.Field
                     , UI.Theme
                     , UI.Types

                     , UI.Modal
                     , UI.Modal.Help
                     , UI.Modal.SubTasks
                     , UI.Modal.MoveTo

  build-depends:       base <= 5
                     , classy-prelude
                     , vty
                     , text
                     , brick
                     , bytestring
                     , config-ini
                     , containers
                     , directory
                     , file-embed
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude


executable taskell
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , classy-prelude
                     , taskell
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

test-suite taskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       UI.FieldTest
                     , IO.MarkdownTest
  build-depends:       base
                     , classy-prelude
                     , text
                     , taskell
                     , tasty
                     , tasty-hunit
                     , tasty-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/smallhadroncollider/taskell
